created region and course_subject variables

--- a/HarvardX_MITx_Person_Course_Dataset_Data_Wrangling.ipynb
+++ b/HarvardX_MITx_Person_Course_Dataset_Data_Wrangling.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "These data are aggregate records, and each record represents one individual's activity in one edX course.  \n",
     "\n",
-    "The data description can be found in file 'Person+Course+Documentation.pdf', for better understanding of each variable, I also put the description of each variable into a spreadsheet(named 'HMX Data description.xlsx') with some comments.\n",
+    "The data description can be found in file 'Person+Course+Documentation.pdf', for better understanding of each variable, I also put the description of each variable into a spreadsheet (named 'HMX Data description.xlsx') with some comments.\n",
     "\n",
     "The dataset and documents are available on link below:\n",
     "\n",
@@ -34,13 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import all packages and set plots to be embedded inline\n",
+    "# import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
-    "from datetime import datetime\n",
-    "%matplotlib inline"
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -250,7 +247,7 @@
    ],
    "source": [
     "# load data into a pandas dataframe and check the first 5 rows\n",
-    "df = pd.read_csv('HMXPC13_DI_v2_5-14-14.csv')\n",
+    "df = pd.read_csv('data/HMXPC13_DI_v2_5-14-14.csv')\n",
     "df.head()"
    ]
   },
@@ -677,6 +674,7 @@
     }
    ],
    "source": [
+    "# value counts of course_id\n",
     "df.course_id.value_counts()"
    ]
   },
@@ -691,7 +689,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -707,6 +705,7 @@
     }
    ],
    "source": [
+    "# unique values of userid_DI\n",
     "df.userid_DI.unique()"
    ]
   },
@@ -742,6 +741,7 @@
     }
    ],
    "source": [
+    "# value counts of registered\n",
     "df.registered.value_counts()"
    ]
   },
@@ -749,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 'registered' variable can just be dropped as discussion earlier"
+    "The 'registered' variable can just be dropped as discussed earlier"
    ]
   },
   {
@@ -780,6 +780,7 @@
     }
    ],
    "source": [
+    "# value counts of viewed\n",
     "df.viewed.value_counts()"
    ]
   },
@@ -809,6 +810,7 @@
     }
    ],
    "source": [
+    "# value counts of explored\n",
     "df.explored.value_counts()"
    ]
   },
@@ -840,6 +842,7 @@
     }
    ],
    "source": [
+    "# value counts of certified\n",
     "df.certified.value_counts()"
    ]
   },
@@ -910,6 +913,7 @@
     }
    ],
    "source": [
+    "# value counts of final_cc_cname_DI, which represent the country of the learner\n",
     "df.final_cc_cname_DI.value_counts()"
    ]
   },
@@ -944,6 +948,7 @@
     }
    ],
    "source": [
+    "# value counts of LoE_DI, level of education\n",
     "df.LoE_DI.value_counts()"
    ]
   },
@@ -986,6 +991,7 @@
     }
    ],
    "source": [
+    "# sort the unique value of YoB, year of birth\n",
     "np.sort(df.YoB.unique())"
    ]
   },
@@ -1016,6 +1022,7 @@
     }
    ],
    "source": [
+    "# value counts of YoB > 2002\n",
     "df[df.YoB>2002].YoB.value_counts()"
    ]
   },
@@ -1023,7 +1030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are really a bunch of unreliable values in this YoB variable. This Wikipedia page[Education in the United States](https://en.wikipedia.org/wiki/Education_in_the_United_States) provides ages of US students go to different schools. Suppose at least elementary school graduates are applicable to study those online courses, then their ages would be 10-11 years old. Based on this, we will select records with the YoB earlier than 2002."
+    "There are really a bunch of unreliable values in this YoB variable. This Wikipedia page [Education in the United States](https://en.wikipedia.org/wiki/Education_in_the_United_States) provides ages of US students go to different schools. Suppose at least elementary school graduates are applicable to study those online courses, then their ages would be at least 10-11 years old. Based on this, we will only keep records with the YoB earlier than 2002."
    ]
   },
   {
@@ -1055,6 +1062,7 @@
     }
    ],
    "source": [
+    "# value counts of gender\n",
     "df.gender.value_counts()"
    ]
   },
@@ -1116,16 +1124,16 @@
        "0.14       518\n",
        "0.87       507\n",
        "0.97       504\n",
-       "0.92       502\n",
        "0.99       502\n",
+       "0.92       502\n",
        "0.94       497\n",
        "         ...  \n",
        "0.65       250\n",
        "0.61       250\n",
        "0.34       249\n",
        "0.6        238\n",
-       "0.38       226\n",
        "0.39       226\n",
+       "0.38       226\n",
        "0.4        217\n",
        "0.36       214\n",
        "0.37       213\n",
@@ -1135,14 +1143,14 @@
        "0.57       174\n",
        "0.45       174\n",
        "0.55       173\n",
-       "0.5        170\n",
        "0.46       170\n",
+       "0.5        170\n",
        "0.53       167\n",
        "0.59       165\n",
        "0.51       160\n",
        "0.43       157\n",
-       "0.47       155\n",
        "0.41       155\n",
+       "0.47       155\n",
        "0.58       153\n",
        "0.44       149\n",
        "0.54       145\n",
@@ -1159,6 +1167,7 @@
     }
    ],
    "source": [
+    "# value count of grade\n",
     "df.grade.value_counts()"
    ]
   },
@@ -1205,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the data description in file 'Person+Course+Documentation.pdf', the variable **'incomplete_flag'** identifies the records which are internally inconsistent, to assure the reliability of the analysis, we would prefer select those records without a inconsistent problem, which is to say, the value of incomplete_flag != 1. Then we will drop this variable since it is no longer of any importance."
+    "According to the data description in file 'Person+Course+Documentation.pdf', the variable **'incomplete_flag'** identifies the records which are internally inconsistent, to assure the reliability of the analysis, we would prefer to keep those records without a inconsistent problem, which is to say, the value of incomplete_flag != 1. Then we will drop this variable since it is no longer of any importance."
    ]
   },
   {
@@ -1781,23 +1790,23 @@
     {
      "data": {
       "text/plain": [
-       "course_id            0.000000\n",
-       "userid_DI            0.000000\n",
-       "viewed               0.000000\n",
-       "explored             0.000000\n",
-       "certified            0.000000\n",
-       "final_cc_cname_DI    0.000000\n",
-       "LoE_DI               0.024776\n",
-       "YoB                  0.000000\n",
-       "gender               0.000000\n",
-       "grade                0.083726\n",
-       "start_time_DI        0.000000\n",
-       "last_event_DI        0.180204\n",
-       "nevents              0.190567\n",
-       "ndays_act            0.190567\n",
-       "nplay_video          0.675934\n",
-       "nchapters            0.439498\n",
-       "nforum_posts         0.000000\n",
+       "course_id            0.00\n",
+       "userid_DI            0.00\n",
+       "viewed               0.00\n",
+       "explored             0.00\n",
+       "certified            0.00\n",
+       "final_cc_cname_DI    0.00\n",
+       "LoE_DI               0.02\n",
+       "YoB                  0.00\n",
+       "gender               0.00\n",
+       "grade                0.08\n",
+       "start_time_DI        0.00\n",
+       "last_event_DI        0.18\n",
+       "nevents              0.19\n",
+       "ndays_act            0.19\n",
+       "nplay_video          0.68\n",
+       "nchapters            0.44\n",
+       "nforum_posts         0.00\n",
        "dtype: float64"
       ]
      },
@@ -1808,7 +1817,7 @@
    ],
    "source": [
     "# proportion of missing values by rows\n",
-    "df.isna().sum() / df.shape[0]"
+    "round(df.isna().sum() / df.shape[0],2)"
    ]
   },
   {
@@ -1961,6 +1970,7 @@
     }
    ],
    "source": [
+    "# check again the missing values by column\n",
     "df.isna().sum()"
    ]
   },
@@ -2013,6 +2023,7 @@
     }
    ],
    "source": [
+    "# check values of grade\n",
     "df.grade.unique()"
    ]
   },
@@ -2290,6 +2301,7 @@
     }
    ],
    "source": [
+    "# statistical description\n",
     "df.describe()"
    ]
   },
@@ -2307,6 +2319,7 @@
     }
    ],
    "source": [
+    "# shape of the cleaned dataset\n",
     "df.shape\n",
     "print('After cleaning, our dataset has {} records, with {} variables'.format(df.shape[0], df.shape[1]))"
    ]
@@ -2507,6 +2520,7 @@
     }
    ],
    "source": [
+    "# variable-type mapping \n",
     "df_type = pd.DataFrame(df.dtypes).reset_index()\n",
     "df_type.columns = ['Variable', 'Type']\n",
     "df_type.reset_index(drop=True)"
@@ -2526,7 +2540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('hmx_cleaned.csv', index=False)"
+    "df.to_csv('data/hmx_cleaned.csv', index=False)"
    ]
   }
  ],
